<resources>
    <string name="app_name">Project-G01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_itinerary">My Itinerary</string>
    <string name="trip_date">Trip Date</string>
    <string name="notes">Notes</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_itinerary">Delete Itinerary</string>
    <string name="address">Address</string>
    <string name="venue">Venue</string>
</resources>